syntax = "proto3";

// 指定包名为pb
package pb;

option go_package="./;pb";

// Weather 天气信息组成
message Weather {
  float MinHeat = 1;       // 温度
  float MaxHeat = 2;       // 温度
  uint32 Status = 3;    // 天气 1:晴天 2:多云 3:雨天 4:雾霾
  uint32 WindSpeed = 4; // 风速
  int64  Time = 5;      // 时间戳
  string City = 6;      // 城市
}

// WeatherReq 天气信息请求体
message WeatherReq {
  string city = 1;  //城市名称
}

// WeatherResp 天气数据响应信息
message WeatherResp {
  Weather data = 1; // 天气数据
}

// WeatherService 天气服务
service WeatherService {
  // GetTodayData 获取今日天气数据
  rpc GetTodayData(WeatherReq) returns (WeatherResp);
}